<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/offline">
            <menu>
                <item
                    android:id="@+id/textRecognitionOfflineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/text_recognition" />
                <item
                    android:id="@+id/barcodeScannerOfflineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/barcode_scanner" />
                <item
                    android:id="@+id/faceDetectionOfflineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/face_detection" />
                <item
                    android:id="@+id/imageLabelingOfflineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/image_labeling" />
            </menu>
        </item>

        <item android:title="@string/online">
            <menu>
                <item
                    android:id="@+id/textRecognitionOnlineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/text_recognition" />
                <item
                    android:id="@+id/barcodeScannerOnlineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/barcode_scanner" />
                <item
                    android:id="@+id/faceDetectionOnlineFragment"
                    android:checkable="true"
                    android:menuCategory="secondary"
                    android:title="@string/face_detection" />
            </menu>
        </item>

    </group>


</menu>